# sillycode

./: .gitignore  .npmignore  Cargo.toml  README.md  package.json  rollup.config.js  tsconfig.json
lib/: dom.test.ts  dom.ts  index.ts  parser.test.ts  parser.ts  renderer.test.ts  renderer.ts
src/: lib.rs  main.rs  parser.rs  parser_test.rs  renderer.rs  renderer_test.rs
